--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header h1{
     text-align: center;
     background-color: #3db36b;
     font-family: 'Courier New';
+  
 }
 #cabecalho #nome{
    margin-left: 300px;
@@ -27,6 +28,9 @@ header h1{
 html{
     scroll-behavior: smooth;
     font-size: 90.5%;
+}
+a{
+    color: #0133B1;
 }
 #cabecalho{
  height: 150px;
@@ -55,16 +59,8 @@ background-color: #fafafa09;
 font-size: 17px;
 margin-left: 60px;
 line-height: 20px;
-
 }
-#texto1{
-height: 300px;
-width: 200px;
-float: left;
-margin-left: 60px;
-margin-top: 10px;
 
-}
 #principal{
     height: 300px;
     width: 300px;
@@ -91,10 +87,7 @@ margin-top: 10px;
     float:left;
     margin-top: 10px;
     margin-left: 10px;
-    
-
-}
-
+    }
 
 #lado3{
     height: 100px;
@@ -107,21 +100,6 @@ margin-top: 10px;
     font-style: italic;
 }
 
-#texto2{
-height: 300px;
-width: 700px;
-float: left;
-margin-left: 60px;
-margin-top: 40px;
-}
-
-#texto3{
-    height: 350px;
-    width: 700px;
-    float: left;
-    margin-left: 60px;
-    margin-top: 30px;
-}
 
 #foto2{
     float: left;
@@ -134,46 +112,19 @@ margin-top: 40px;
     width: 450px;
     float: left;
     margin-left: 60px;
-
 }
-#texto4{
-    height: 250px;
-    width: 900px;
-    margin-left: 60px;
-    margin-top: 10px;
-    float: left;
-}
-#texto5{
-    height: 300px;
-    width: 600px;
+#comentario{
+    height: 500px;
+    width: 1100px;
     margin-left: 70px;
-    margin-top: 10px;
+    margin-top: 50px;
     float: left;   
+    background-color:aqua;
 }
-
-#texto6{
-    height: 200px;
-    width: 900px;
-    margin-left: 70px;
-    margin-top: 30px;
-    float: left;   
-}
-#texto-final{
-    height: 300px;
-    width: 900px;
-    margin-left: 70px;
-    margin-top: 10px;
-    float: left;   
-}
-p{
-    margin-top: 5px;  
-}
-
-
 #rodape{
     height: 100px;
     width: 95%;
-    background-color: pink;
+    background-color: #3db36b;
     clear: both;
     margin: 0 auto;
     margin-top: 10px;
