inplementei o css da parte de avaliação

--- a/css/styleAvaliacao.css
+++ b/css/styleAvaliacao.css
@@ -1,6 +1,7 @@
 .conteiner{
     max-width: 1280px;
     margin:0 auto;
+    
 }
 
 form{
@@ -10,17 +11,20 @@ form{
     padding: 40px;
     border-radius: 20px 0;
     font-size: 12px;
+    float:left
 }
 
 .input-single{
     position: relative;
     margin: 10px 0;
+    float: left;
 }
 .input-single label{
     position: absolute;
     left:0;
     bottom: 5px;
     transition: all 0.2s;
+    float:left;
 }
 .input{
      width: 100%;
@@ -29,6 +33,7 @@ form{
      padding: 5px;
      font-size: 15px;
      outline: 0;
+     float:left;
 }
 form .input-single .input:focus ~ label, /* focus serve para quando o usuario interagir na caixa de texto*/
 form .input-single .input:valid ~ label{ 
